@@ -1,3 +1,7 @@
+2003-01-25  Dom Lachowicz <cinamod@hotmail.com>
+
+	* *: Support CSS id as well as class, style
+	
 2003-01-23  Dom Lachowicz <cinamod@hotmail.com>
 
 	* test-rsvg.c : Support a JPEG quality argument [1-100]
